--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <div class="container">
     <div class="heading">
-      <h1 class="title">2048</h1>
+      <h2 class="title">十二起肖</h2>
       <div class="scores-container">
         <div class="score-container">0</div>
         <div class="best-container">0</div>
