--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
 
     <div class="above-game">
-      <p class="game-intro">🐭🐮🐯🐰🐲🐍🐎🐑🐒🐔🐶🐷<strong>2048 tile!</strong></p>
+      <p class="game-intro">🐭 🐮 🐯 🐰 🐲 🐍 🐎 🐑 🐒 🐔 🐶 🐷</p>
       <a class="restart-button">New Game</a>
     </div>
 
